apply plugin: 'java'
apply plugin: 'war'
sourceCompatibility = 1.7
targetCompatibility = 1.7
sourceSets {
	test {
		java {
			srcDir 'src/test/java'
		}
	}
}
test{
	jvmArgs '-XX:MaxPermSize=512m'
}
task copyTestResources(type: Copy) {
	into "$buildDir/resources/lib"
	from configurations.runtime
}
processTestResources.dependsOn copyTestResources
dependencies {
	runtime fileTree(dir: "$project.buildDir/libs", include: "*.jar")
	compile fileTree(dir: myLibPath, include: [
		'log4j/log4j-1.2.17.jar',
		'oro/oro-2.0.8.jar',
		'gtranslateapi/gtranslateapi-1.0.jar',
		'miglayout/miglayout-3.7.4.jar',
		'mvel/mvel2-2.1.8.Final.jar',
		'yaml/snakeyaml-1.13.jar',
		'google-voice/google-voice-1.14.jar',
		'apache-commons/commons-lang3-3.1.jar',
		'apache-mina/mina-core-2.0.7.jar',
		'noggit/noggit-0.5.jar',
		'apache-solr/solr-solrj-4.9.0.jar',
		'sf-jpam/jpam-1.1.jar',
		'mysql/mysql-connector-java-5.1.31.jar',
		'aspectj/aopalliance-1.0.jar',
		'netty/netty-3.7.0.Final.jar',
		'json/jline-0.9.94.jar',
		'json/json-taglib-0.4.1.jar',
		'google-gson/gson-2.3.1.jar',
		'google-gson/protobuf-java-2.5.0.jar',
		'kie/kie-api-6.0.1.Final.jar',
		'kie/kie-internal-6.0.1.Final.jar',
		'restlet/org-restlet-ext-servlet-2.1.1.jar',
		'restlet/org-restlet-2.1.1.jar',
		'slf4j/slf4j-log4j12-1.7.5.jar',
		'slf4j/slf4j-api-1.7.6.jar',
		'json/json-20090211.jar',
		'json/json-taglib-0.4.1.jar',
		'aspectj/aspectjweaver-1.7.4.jar',
		'aspectj/aspectjrt-1.7.4.jar',
		'google-guava/guava-14.0.1.jar',
		'carrotsearch/hppc-0.5.2.jar',
		'antlr/antlr-2.7.7.jar',
		'antlr/antlr-runtime-3.5.jar',
		'antlr/stringtemplate-3.2.1.jar',
		'spring-framework/spring-context-4.0.6.RELEASE.jar',
		'spring-framework/spring-aop-3.2.6.RELEASE.jar',
		'spring-framework/spring-aspects-3.2.6.RELEASE.jar',
		'spring-framework/spring-context-support-3.2.6.RELEASE.jar',
		'spring-framework/spring-orm-4.1.1.RELEASE.jar',
		'spring-framework/spring-core-4.0.6.RELEASE.jar',
		'spring-framework-boot/spring-boot-1.1.7.RELEASE.jar',
		'spring-framework-boot/spring-boot-starter-logging-1.1.7.RELEASE.jar',
		'spring-framework-boot/spring-boot-actuator-1.1.7.RELEASE.jar',
		'spring-framework-boot/spring-boot-starter-actuator-1.1.9.RELEASE.jar',
		'spring-framework-boot/spring-boot-autoconfigure-1.1.7.RELEASE.jar',
		'spring-framework-boot/spring-boot-loader-tools-1.1.7.RELEASE.jar',
		'spring-framework-boot/spring-boot-dependency-tools-1.1.7.RELEASE.jar',
		'spring-framework-boot/spring-boot-starter-1.1.7.RELEASE.jar',
		'spring-framework-boot/spring-boot-loader-1.1.7.RELEASE.jar',
		'spring-framework-boot/spring-boot-starter-log4j-1.1.9.RELEASE.jar',
		'spring-framework-test/spring-test-4.0.6.RELEASE.jar',
		'spring-framework-security/spring-ldap-core-1.3.2.RELEASE.jar',
		'spring-framework-security/spring-security-core-3.2.5.RELEASE.jar',
		'spring-framework-security/spring-security-ldap-3.2.5.RELEASE.jar',
		'spring-framework-security/spring-security-config-3.2.5.RELEASE.jar',
		'spring-framework-security/spring-security-web-3.2.5.RELEASE.jar',
		'commons/commons-beanutils-1.9.2.jar',
		'commons/commons-chain-1.1.jar',
		'commons/commons-beanutils-core-1.8.3.jar',
		'commons/commons-validator-1.3.1.jar',
		'commons/commons-digester-2.1.jar',
		'commons/commons-logging-1.0.4.jar',
		'commons/commons-io-2.1.jar',
		'commons/dom4j-1.1.jar',
		'athena/athena-config-1.0.jar',
		'athena/athena-framework-1.0.jar',
		'spartan/spartan-sprinkler-1.0.jar',
		'spartan/spartan-healthmeter-1.0.jar',
		'commons/asm-4.1.jar',
		'commons/commons-lang-2.4.jar',
		'commons/commons-dbcp-1.4.jar',
		'commons/commons-pool-1.5.4.jar',
		'commons/commons-fileupload-1.2.jar',
		'commons/commons-codec-1.9.jar',
		'commons/commons-httpclient-3.1.jar',
		'commons/commons-collections-3.2.1.jar',
		'commons/asm-commons-4.1.jar',
		'eclipse/eclipselink-2.5.1.jar',
		'eclipse/javax.persistence-2.0.0.jar',
		'eclipse/commonj-sdo-2.1.0.jar',
		'eclipse/ecj-3.7.2.jar',
		'spring-framework/spring-web-4.0.6.RELEASE.jar',
		'spring-framework/spring-webmvc-4.0.6.RELEASE.jar',
		'spring-framework/spring-jdbc-4.1.1.RELEASE.jar',
		'spring-framework/spring-expression-4.1.1.RELEASE.jar',
		'spring-framework/spring-beans-4.0.6.RELEASE.jar',
		'spring-framework/spring-tx-4.0.6.RELEASE.jar',
		'apache-bval/bval-jsr303-0.5.jar',
		'apache-bval/bval-core-0.5.jar',
		'apache-bval/xmlbeans-2.3.0.jar',
		'codehaus/jackson-mapper-asl-1.9.13.jar',
		'codehaus/jackson-core-asl-1.9.13.jar',
		'codehaus/groovy-all-2.3.6.jar',
		'fasterxml/jackson-annotations-2.2.3.jar',
		'fasterxml/jackson-core-2.2.3.jar',
		'fasterxml/jackson-databind-2.2.3.jar',
		'javax/validation-api-1.0.0.GA.jar',
		'javax/javax.servlet-api-3.1.0.jar',
		'javax/activation-1.1.jar',
		'javax/mail-1.4.7.jar',
		'drools/drools-compiler-6.0.1.Final.jar',
		'drools/drools-core-6.0.1.Final.jar',
		'drools/drools-examples-6.0.1.Final.jar',
		'drools/xstream-1.4.3.jar',
		'drools/drools-templates-6.0.1.Final.jar',
		'drools/drools-decisiontables-6.0.1.Final.jar',
		'apache-httpcomponents/httpmime-4.4.jar',
		'apache-httpcomponents/httpclient-4.3.1.jar',
		'apache-httpcomponents/httpcore-4.3.jar',
		'apache-lucene/lucene-analyzers-common-4.9.0.jar',
		'apache-lucene/lucene-codecs-4.9.0.jar',
		'apache-lucene/lucene-core-4.9.0.jar',
		'apache-lucene/lucene-queryparser-4.9.0.jar',
		'apache-lucene/lucene-grouping-5.0.0.jar',
		'apache-lucene/lucene-highlighter-4.9.0.jar',
		'apache-lucene/lucene-join-4.9.0.jar',
		'apache-lucene/lucene-memory-4.9.0.jar',
		'apache-lucene/lucene-misc-5.0.0.jar',
		'apache-lucene/lucene-queries-4.9.0.jar',
		'apache-lucene/lucene-spatial-4.9.0.jar',
		'apache-lucene/lucene-suggest-4.9.0.jar',
		'apache-lucene/lucene-analyzers-phonetic-4.9.0.jar',
		'apache-lucene/lucene-expressions-4.9.0.jar',
		'apache-lucene/lucene-analyzers-kuromoji-4.9.0.jar',
		'apache-lucene/lucene-sandbox-4.9.0.jar',
		'apache-lucene/lucene-analyzers-kuromoji-4.9.0.jar',
		'spatial/spatial4j-0.4.1.jar',
		'apache-sshd/sshd-core-0.11.0.jar',
		'apache-sshd/sshd-pam-0.11.0.jar',
		'apache-velocity/velocity-1.7.jar',
		'apache-velocity/velocity-tools-2.0-beta3.jar',
		'apache-zookeeper/zookeeper-3.4.6.jar',
		'poi/poi-scratchpad-3.10-beta2.jar',
		'google-voice/google-voice-1.14.jar',
		'gtranslateapi/gtranslateapi-1.0.jar',
		'joda-time/joda-time-2.2.jar',
		'poi/poi-scratchpad-3.2-FINAL.jar',
		'poi/poi-ooxml-3.10-beta2.jar',
		'poi/poi-ooxml-schemas-3.10-beta2.jar',
		'camel/camel-core-2.15.2.jar',
		'camel/camel-context-2.15.2.jar',
		'camel/soa-model-core-1.4.1.4.jar',
		'camel/soa-model-distribution-1.4.1.4.jar',
		'camel/camel-cxf-2.15.2.jar',
		'camel/camel-cxf-transport-2.15.2.jar',
		'camel/camel-http-2.15.2.jar',
		'camel/camel-spring-2.15.2.jar',
		'camel/commons-lang-2.4.jar',
		'camel/commons-logging-1.1.1.jar',
		'camel/commons-logging-api-1.1.jar',
		'camel/cxf-api-2.3.2-fuse-00-00.jar',
		'camel/cxf-common-schemas-2.3.2-fuse-00-00.jar',
		'camel/cxf-common-utilities-2.5.11.jar',
		'camel/cxf-rt-bindings-soap-2.3.2-fuse-00-00.jar',
		'camel/cxf-rt-bindings-xml-2.3.2-fuse-00-00.jar',
		'camel/cxf-rt-core-2.3.2-fuse-00-00.jar',
		'camel/cxf-rt-databinding-jaxb-2.3.2-fuse-00-00.jar',
		'camel/cxf-rt-frontend-jaxrs-2.3.2-fuse-00-00.jar',
		'camel/cxf-rt-frontend-jaxws-2.3.2-fuse-00-00.jar',
		'camel/cxf-rt-frontend-simple-2.3.2-fuse-00-00.jar',
		'camel/cxf-rt-transports-common-2.3.2-fuse-00-00.jar',
		'camel/cxf-rt-transports-http-2.3.2-fuse-00-00.jar',
		'camel/cxf-rt-ws-addr-2.3.2-fuse-00-00.jar',
		'camel/cxf-tools-common-2.3.2-fuse-00-00.jar',
		'camel/jaxb-impl-2.1.13',
		'camel/jsr311-api-1.1.1.jar',
		'camel/stax2-api-4.0.0.jar',
		'camel/woodstox-core-asl-4.2.0.jar',
		'camel/wsdl4j-1.6.2.jar',
		'poi/poi-3.10-beta2.jar',
		'javax/javax.batch-api-1.0.jar',
		'jettision/jettison-1.2.jar',
		'springframework-batch/spring-batch-core-3.0.4.RELEASE.jar',
		'quartz/quartz-2.1.5.jar',
		'xml/XmlSchema-1.4.7.jar'
	])
	testCompile fileTree(dir: myLibPath, include: [
		'junit/junit-4.11.jar',
		'hamcrest/hamcrest-core-1.3.jar',
		'hamcrest/hamcrest-all-1.3.jar'
	])
}
